loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: value update is not a member of Boolean
while(estFaceMur()=0){
      ^